--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/mjhenkes/module-A/issues"
   },
-  "homepage": "https://github.com/mjhenkes/module-A#readme"
+  "homepage": "https://github.com/mjhenkes/module-A#readme",
+  "dependencies": {
+    "module-c": "https://github.com/mjhenkes/module-C/archive/1.0.0.tar.gz",
+    "module-b": "https://github.com/mjhenkes/module-B/archive/1.0.1.tar.gz"
+  }
 }
